# picow_gamepad_host_client

./: README.md
client/: CMakeLists.txt  btstack_config.h  gamepad.c  hid_gamepad.c  hid_gamepad.h
host/: CMakeLists.txt
host/example/: CMakeLists.txt  example.cpp
host/src/: dualsense_l2cap.cpp
